--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,15 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--white-color);
-    /* transition: background-color 0.5s ease; */
 }
 
 /* ---------------------------------------> NavBar <--------------------------------------- */
 .navbar {
     padding: 1.5rem;
     background-color: var(--white-color);
-    /* transition: background-color 0.5s ease; */
     align-items: center;
 }
 
@@ -30,8 +32,8 @@ body {
     flex-grow: 1;
     color: var(--primary-color);
     background-color: var(--white-color);
-    border: 2px solid var(--hover-color);
-    margin: 0 7rem;
+    border: 2px solid var(--primary-color);
+    margin: 0 1rem;
     align-items: center;
 }
 
@@ -236,6 +238,10 @@ body {
 
 /* -----------------------------------------> Responsive CSS <------------------------------------ */
 @media only screen and (max-width: 700px) {
+    .nav-items {
+        display: none;
+    }
+
     .nav-icons .nav-menu {
         font-size: 1.8rem;
         display: block;
