--- a/css/cart.css
+++ b/css/cart.css
@@ -10,6 +10,10 @@
     justify-content: space-between;
 }
 
+.link-active:hover {
+    color: var(--default-color);
+}
+
 .nav-icons .link-active-hover:after {
     border-bottom: solid 3px var(--default-color);
 }
